# python-project-83

./: Makefile  README.md  database.sql  initialize_database.sql  pyproject.toml
page_analyzer/: __init__.py  app.py  check.py  connections_pool.py  site.py  site_check.py  url.py
page_analyzer/templates/: index.html  url.html  urls.html
